feat: add getHeroById- rest controller

--- a/heroes-web-app/src/main/resources/application.properties
+++ b/heroes-web-app/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8080
-spring.h2.console.enabled=true
 
+server.error.include-stacktrace=never
+
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
