feat: refactoring update rest service

--- a/heroes-web-app/src/main/resources/application.properties
+++ b/heroes-web-app/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.error.include-stacktrace=never
 
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
