feat: add spring security

--- a/heroes-web-app/src/main/resources/application.properties
+++ b/heroes-web-app/src/main/resources/application.properties
@@ -5,3 +5,5 @@ server.error.include-stacktrace=never
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+app.secret.key=J@!gt*K
