feat: add docker files and refactor code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8080
 
+server.error.include-stacktrace=never
+
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+app.secret.key=J@!gt*K
