--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,12 @@
 		<dependency>
 		    <groupId>javax.xml.bind</groupId>
 		    <artifactId>jaxb-api</artifactId>
-		    <version>2.3.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.modelmapper</groupId>
+		    <artifactId>modelmapper</artifactId>
+		    <version>2.4.4</version>
 		</dependency>
 	    
 	</dependencies>
