--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,18 @@ server.port=8080
 
 server.error.include-stacktrace=never
 
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 app.secret.key=J@!gt*K
+
+
+
+spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
+logging.level.liquibase = INFO
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:test;
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.h2.console.enabled=true
