--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,6 @@ spring.jpa.show-sql=true
 
 app.secret.key=J@!gt*K
 
-
-
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 logging.level.liquibase = INFO
 spring.datasource.driver-class-name=org.h2.Driver
@@ -17,3 +15,5 @@ spring.datasource.url=jdbc:h2:mem:test;
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.h2.console.enabled=true
+
+spring.cache.jcache.config=classpath:ehcache.xml
